PRE MVP 0.4: Integrate Quick Actions with AI Copilot chat widget
- Added Quick Actions buttons to chat widget interface
- Integrated chat widget with existing modal functionality
- Added voice command triggers for Quick Actions
- Enhanced chat responses to open modals automatically
- Added success notifications when actions are triggered
- Made modal functions globally accessible
- Updated chat widget with 4 Quick Action buttons
- Added seamless integration between chat and dashboard actions

--- a/index.html
+++ b/index.html
@@ -760,6 +760,15 @@
             document.getElementById('missions-modal').classList.add('hidden');
         }
 
+        // Make functions globally accessible for chat widget
+        window.openQuickCheckIn = openQuickCheckIn;
+        window.closeCheckInModal = closeCheckInModal;
+        window.openLogExpense = openLogExpense;
+        window.closeExpenseModal = closeExpenseModal;
+        window.openViewMissions = openViewMissions;
+        window.closeMissionsModal = closeMissionsModal;
+        window.showNotification = showNotification;
+
         // Form submission handlers
         document.getElementById('checkin-form').addEventListener('submit', function(e) {
             e.preventDefault();
